# starscene

./: Cargo.toml  build.rs
scripts/: download_tycho.sh
src/: cameraframe.rs  consts.rs  lib.rs  poisson.rs
src/am0/: am0_raw.rs  mod.rs
src/camera/: mod.rs  pointing.rs
src/camera/mathutils/: erf.rs  erfdiff.rs  mod.rs  poisson.rs
src/camstate/: mod.rs  siderealtrack.rs  staticgcrf.rs  staticitrf.rs
src/catalogs/: gaia.rs  kdtree.rs  mod.rs  tycho2.rs
src/pybindings/: mod.rs  pycamera.rs  pycatalog.rs  pypointing.rs  pystar.rs  pystarscene.rs
src/starcatalog/: mod.rs
src/starscene/: mod.rs
