[package]
name = "starscene"
version = "0.1.0"
readme = "README.md"
description = "Generate high-fidelity model of unresolved star scene"
edition = "2021"

[lib]
name = "starscene"

[dependencies]
satkit = "0.5.4"
nalgebra = "0.33.2"
pyo3 = { version = "0.23.4", features = ["extension-module"], optional = true }
numpy = { version = "0.23.0", optional = true }
cdshealpix = "0.7.3"
rand = "0.9.0"
rand_distr = "0.5.0"
num-traits = "0.2.14"
once_cell = "1.20.2"
png = "0.17.16"

[build-dependencies]
pyo3-build-config = { version = "0.23.4", optional = true }

[features]
pybindings = ["pyo3", "numpy", "pyo3-build-config", "satkit/pybindings"]

[profile.test]
opt-level = 3
inherits = "release"
