[package]
keywords = ["star"]
name = "starscene"
version = "0.1.0"
edition = "2021"
description = "Simulate star scenes"
readme = "README.md"
license-file = "LICENSE"
#homepage = "https://github.com/ssmichael1/tetra3-rs"
#repository = "https://github.com/ssmichael1/tetra3-rs"
categories = ["aerospace", "algorithms", "mathematics", "science"]


[lib]
name = "starscene"
# Enable both rlib and cdylib crate types to support Python bindings
crate-type = ["rlib", "cdylib"]

[dependencies]
image = { version = "0.25.9", default-features = false, features = [] }
rkyv = { version = "0.8", features = ["bytecheck"] }
num-traits = "0.2.15"
anyhow = "1.0.71"
tracing = { version = "0.1.40", features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
nalgebra = { version = "0.34.1", features = ["std"] }
thiserror = "2.0.17"
pyo3 = { version = "0.27.1", optional = true, features = [
    "extension-module",
    "anyhow",
] }
numpy = { version = "0.27", optional = true }
rand = "0.9.2"
rand_distr = "0.5.1"
#statrs = "0.18.0"
rayon = "1.11.0"
csv = "1.4.0"


[build-dependencies]
pyo3-build-config = { version = "0.27.2", optional = true }

[features]
python = ["pyo3", "pyo3-build-config", "numpy"]
fma = []
default = ["fma"]

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
